--- a/.github/workflows/scrape-simignano.yml
+++ b/.github/workflows/scrape-simignano.yml
@@ -5,8 +5,8 @@ name: Scrape Simignano Data
 
 on:
   schedule:
-    # Ogni 15 minuti
-    - cron: '5 * * * *'
+    # Ogni 20 e 50 minuti
+    - cron: '20,50 * * * *'
   workflow_dispatch: # Permette esecuzione manuale
 
 jobs:
